--- a/View/HomePage/StatusCell/StatusRetweetedCell.xib
+++ b/View/HomePage/StatusCell/StatusRetweetedCell.xib
@@ -12,15 +12,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" rowHeight="473" id="25f-7L-Kz6" customClass="StatusCellTableViewCell" customModule="WB" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="374" height="474"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" rowHeight="689" id="25f-7L-Kz6" customClass="StatusCellTableViewCell" customModule="WB" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="544" height="690"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="25f-7L-Kz6" id="LWE-Ix-6UD">
-                <rect key="frame" x="0.0" y="0.0" width="374" height="473.66666666666669"/>
+                <rect key="frame" x="0.0" y="0.0" width="544" height="689.66666666666663"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aVN-QY-ZlH" userLabel="顶部分割视图">
-                        <rect key="frame" x="0.0" y="0.0" width="374" height="8"/>
+                        <rect key="frame" x="0.0" y="0.0" width="544" height="8"/>
                         <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.94901960784313721" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="8" id="1SO-tb-tnl"/>
@@ -78,39 +78,39 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="自己的评论" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EWg-Z4-yCz" userLabel="正文">
-                        <rect key="frame" x="12" y="65.999999999999986" width="350" height="131.66666666666663"/>
-                        <color key="backgroundColor" red="0.45138680930000002" green="0.99309605359999997" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <rect key="frame" x="12" y="66" width="520" height="347.66666666666669"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Oyv-jm-o2s" userLabel="被转发微博的背景按钮">
-                        <rect key="frame" x="12" y="209.66666666666663" width="350" height="228.33333333333337"/>
-                        <color key="backgroundColor" red="0.99942404029999998" green="0.98555368190000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <rect key="frame" x="12" y="425.66666666666669" width="520" height="228.33333333333331"/>
+                        <color key="backgroundColor" white="0.84168836810000003" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </button>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="被转发微博的正文" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Eb7-Z8-k7K" userLabel="被转发微博的正文">
-                        <rect key="frame" x="12" y="210" width="350" height="15"/>
-                        <color key="backgroundColor" red="1" green="0.42352941179999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="被转发微博的正文" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Eb7-Z8-k7K" userLabel="被转发微博的正文">
+                        <rect key="frame" x="12" y="426" width="520" height="15"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SAB-wK-evT" userLabel="图片视图容器" customClass="PictureContainerView" customModule="WB" customModuleProvider="target">
-                        <rect key="frame" x="12" y="225" width="350" height="213"/>
+                        <rect key="frame" x="12" y="441" width="520" height="213"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="213" id="NxV-u3-7NT"/>
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zfz-UE-Lt6" userLabel="分割线">
-                        <rect key="frame" x="12" y="444" width="350" height="1"/>
+                        <rect key="frame" x="12" y="660" width="520" height="1"/>
                         <color key="backgroundColor" white="0.84168836805555558" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="Z0L-7x-1P6"/>
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YYj-G0-MQu" userLabel="底部工具栏">
-                        <rect key="frame" x="12" y="445.66666666666669" width="350" height="28"/>
+                        <rect key="frame" x="12" y="661.66666666666663" width="520" height="28"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Qt-18-e0Q" userLabel="转发">
                                 <rect key="frame" x="0.0" y="0.0" width="104" height="28"/>
@@ -167,7 +167,6 @@
                     <constraint firstItem="5Ye-rh-cls" firstAttribute="leading" secondItem="BTv-SW-mx5" secondAttribute="trailing" constant="11" id="0Xs-05-6ig"/>
                     <constraint firstItem="EWg-Z4-yCz" firstAttribute="top" secondItem="BTv-SW-mx5" secondAttribute="bottom" constant="12" id="6jZ-y2-xcf"/>
                     <constraint firstItem="aVN-QY-ZlH" firstAttribute="leading" secondItem="LWE-Ix-6UD" secondAttribute="leading" id="7do-93-BuS"/>
-                    <constraint firstItem="zfz-UE-Lt6" firstAttribute="top" secondItem="Oyv-jm-o2s" secondAttribute="bottom" constant="6" id="9LG-bh-apd"/>
                     <constraint firstItem="EoS-qh-pzE" firstAttribute="centerY" secondItem="BTv-SW-mx5" secondAttribute="bottom" id="JSr-Ic-0ay"/>
                     <constraint firstAttribute="trailing" secondItem="Eb7-Z8-k7K" secondAttribute="trailing" constant="12" id="KD2-Je-gOc"/>
                     <constraint firstItem="Dlc-01-ohY" firstAttribute="leading" secondItem="mB5-vg-0UI" secondAttribute="trailing" constant="5" id="LFv-rJ-PVK"/>
@@ -187,12 +186,13 @@
                     <constraint firstItem="Uqa-N9-UFv" firstAttribute="centerY" secondItem="5Ye-rh-cls" secondAttribute="centerY" id="eJM-2H-3rk"/>
                     <constraint firstItem="Uqa-N9-UFv" firstAttribute="leading" secondItem="5Ye-rh-cls" secondAttribute="trailing" constant="3" id="fcW-70-dEu"/>
                     <constraint firstItem="SAB-wK-evT" firstAttribute="top" secondItem="Eb7-Z8-k7K" secondAttribute="bottom" id="gca-ke-slL"/>
+                    <constraint firstItem="zfz-UE-Lt6" firstAttribute="top" secondItem="Oyv-jm-o2s" secondAttribute="bottom" constant="6" id="hch-nA-NxN"/>
                     <constraint firstItem="EWg-Z4-yCz" firstAttribute="leading" secondItem="BTv-SW-mx5" secondAttribute="leading" id="i0J-PB-dls"/>
                     <constraint firstItem="SAB-wK-evT" firstAttribute="leading" secondItem="LWE-Ix-6UD" secondAttribute="leading" constant="12" id="om2-ni-17J"/>
                     <constraint firstAttribute="trailing" secondItem="EWg-Z4-yCz" secondAttribute="trailing" constant="12" id="pC2-fX-aAf"/>
                     <constraint firstItem="BTv-SW-mx5" firstAttribute="leading" secondItem="LWE-Ix-6UD" secondAttribute="leading" constant="12" id="qYp-Uh-2G7"/>
                     <constraint firstItem="YYj-G0-MQu" firstAttribute="top" secondItem="zfz-UE-Lt6" secondAttribute="bottom" id="qwg-aP-SRo"/>
-                    <constraint firstItem="Oyv-jm-o2s" firstAttribute="top" secondItem="EWg-Z4-yCz" secondAttribute="bottom" constant="12" id="rRk-NI-2dm"/>
+                    <constraint firstItem="Oyv-jm-o2s" firstAttribute="top" relation="lessThanOrEqual" secondItem="EWg-Z4-yCz" secondAttribute="bottom" constant="12" id="rRk-NI-2dm"/>
                     <constraint firstItem="Eb7-Z8-k7K" firstAttribute="top" secondItem="Oyv-jm-o2s" secondAttribute="top" id="rxv-cS-V7h"/>
                     <constraint firstItem="EoS-qh-pzE" firstAttribute="centerX" secondItem="BTv-SW-mx5" secondAttribute="trailing" id="uRc-mm-jJi"/>
                     <constraint firstAttribute="trailing" secondItem="SAB-wK-evT" secondAttribute="trailing" constant="12" id="uaE-sq-K2q"/>
@@ -209,6 +209,7 @@
                 <outlet property="pictureViewHeight" destination="NxV-u3-7NT" id="149-7c-6lX"/>
                 <outlet property="pingLunBtn" destination="g1u-PO-rlq" id="v39-Qh-xUt"/>
                 <outlet property="renZhengImageView" destination="EoS-qh-pzE" id="zJo-Zk-0YA"/>
+                <outlet property="retweetedZhenWen" destination="Eb7-Z8-k7K" id="lMh-pb-AMD"/>
                 <outlet property="screenName" destination="5Ye-rh-cls" id="xDk-jl-Rh2"/>
                 <outlet property="time" destination="mB5-vg-0UI" id="zKf-jX-oAd"/>
                 <outlet property="touXiangImageView" destination="BTv-SW-mx5" id="oND-ZS-t8i"/>
@@ -216,7 +217,7 @@
                 <outlet property="zhuanFaBtn" destination="4Qt-18-e0Q" id="uPt-JE-vs7"/>
                 <outlet property="zhuanFaBtnWidth" destination="alH-NO-Nau" id="rW8-Ye-RFf"/>
             </connections>
-            <point key="canvasLocation" x="-7038" y="-855"/>
+            <point key="canvasLocation" x="-7266" y="-1099"/>
         </tableViewCell>
     </objects>
     <resources>
