WB_1.0.0_添加刷新视图到刷新控件，处理滑动状态的改变

--- a/Tools/MQLRefreshControl/MQLRefreshView.xib
+++ b/Tools/MQLRefreshControl/MQLRefreshView.xib
@@ -12,26 +12,26 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="MQLRefreshView" customModule="刷新控件001" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="135" height="44"/>
+            <rect key="frame" x="0.0" y="0.0" width="115" height="44"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" image="tableview_pull_refresh.png" translatesAutoresizingMaskIntoConstraints="NO" id="P38-ZN-yiy">
                     <rect key="frame" x="0.0" y="6" width="32" height="32"/>
                     <autoresizingMask key="autoresizingMask"/>
                 </imageView>
-                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="io8-PC-8Z1">
+                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="io8-PC-8Z1">
                     <rect key="frame" x="6" y="13" width="20" height="20"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </activityIndicatorView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="下拉开始刷新..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ELC-IC-6RU">
-                    <rect key="frame" x="40" y="12" width="95" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="下拉刷新..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ELC-IC-6RU">
+                    <rect key="frame" x="40" y="12" width="75" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -40,7 +40,7 @@
                 <outlet property="indicator" destination="io8-PC-8Z1" id="AdO-Ri-AWC"/>
                 <outlet property="promptLabel" destination="ELC-IC-6RU" id="GXU-pl-Erd"/>
             </connections>
-            <point key="canvasLocation" x="-201" y="-156"/>
+            <point key="canvasLocation" x="-576" y="-149"/>
         </view>
     </objects>
     <resources>
