--- a/View/Main/ComposeTypeView/ComposeTypeButton.xib
+++ b/View/Main/ComposeTypeView/ComposeTypeButton.xib
@@ -1,18 +1,56 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ComposeTypeButton" customModule="WB" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tabbar_compose_idea.png" translatesAutoresizingMaskIntoConstraints="NO" id="q01-6l-ftM">
+                    <rect key="frame" x="14.5" y="0.0" width="71" height="71"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="71" id="X6A-Jc-vlY"/>
+                        <constraint firstAttribute="height" constant="71" id="k1u-ik-d3a"/>
+                    </constraints>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="文字" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2KM-dQ-Oxg">
+                    <rect key="frame" x="0.0" y="79" width="100" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="21" id="vQ3-Jd-XQh"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <constraints>
+                <constraint firstItem="q01-6l-ftM" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="LhR-Ep-x7I"/>
+                <constraint firstAttribute="trailing" secondItem="2KM-dQ-Oxg" secondAttribute="trailing" id="Nii-dz-sG7"/>
+                <constraint firstItem="q01-6l-ftM" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Oi9-Uy-7Xs"/>
+                <constraint firstItem="2KM-dQ-Oxg" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Qer-7r-RWh"/>
+                <constraint firstAttribute="bottom" secondItem="2KM-dQ-Oxg" secondAttribute="bottom" id="erT-Nv-aPB"/>
+            </constraints>
+            <nil key="simulatedTopBarMetrics"/>
+            <nil key="simulatedBottomBarMetrics"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <connections>
+                <outlet property="imageView" destination="q01-6l-ftM" id="gV1-nA-hPB"/>
+                <outlet property="titleLabel" destination="2KM-dQ-Oxg" id="xNo-ff-qcD"/>
+            </connections>
+            <point key="canvasLocation" x="-643" y="-318"/>
         </view>
     </objects>
+    <resources>
+        <image name="tabbar_compose_idea.png" width="71" height="71"/>
+    </resources>
 </document>
