--- a/View/Main/ComposeTypeView/ComposeTypeView.xib
+++ b/View/Main/ComposeTypeView/ComposeTypeView.xib
@@ -1,18 +1,73 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina5_9" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ComposeTypeView" customModule="WB" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <subviews>
+                <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MAK-4V-ypU">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="2C1-tE-G7F">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="compose_slogan.png" translatesAutoresizingMaskIntoConstraints="NO" id="TaU-x1-kyK">
+                                <rect key="frame" x="111" y="20" width="154" height="48"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="154" id="FQT-v8-gLl"/>
+                                    <constraint firstAttribute="height" constant="48" id="LLv-rP-PHO"/>
+                                </constraints>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5sH-wh-v5i">
+                                <rect key="frame" x="0.0" y="768" width="375" height="44"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="f1L-De-53K"/>
+                                </constraints>
+                            </view>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KzF-aD-97V">
+                                <rect key="frame" x="0.0" y="484" width="375" height="224"/>
+                                <color key="backgroundColor" red="0.99942404029999998" green="0.98555368190000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="224" id="6Mg-JN-eqD"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="5sH-wh-v5i" firstAttribute="leading" secondItem="2C1-tE-G7F" secondAttribute="leading" id="7Gi-ij-BLq"/>
+                            <constraint firstAttribute="trailing" secondItem="KzF-aD-97V" secondAttribute="trailing" id="F0I-u7-hsU"/>
+                            <constraint firstAttribute="bottom" secondItem="5sH-wh-v5i" secondAttribute="bottom" id="Or3-X0-sIp"/>
+                            <constraint firstItem="5sH-wh-v5i" firstAttribute="top" secondItem="KzF-aD-97V" secondAttribute="bottom" constant="60" id="X6N-Cq-Imb"/>
+                            <constraint firstItem="TaU-x1-kyK" firstAttribute="top" secondItem="2C1-tE-G7F" secondAttribute="top" constant="20" id="X6t-V8-GPi"/>
+                            <constraint firstAttribute="trailing" secondItem="5sH-wh-v5i" secondAttribute="trailing" id="XZO-HZ-Vh8"/>
+                            <constraint firstItem="KzF-aD-97V" firstAttribute="leading" secondItem="2C1-tE-G7F" secondAttribute="leading" id="t9r-Xw-q4T"/>
+                            <constraint firstItem="TaU-x1-kyK" firstAttribute="centerX" secondItem="2C1-tE-G7F" secondAttribute="centerX" id="wce-Z6-Xha"/>
+                        </constraints>
+                    </view>
+                    <blurEffect style="extraLight"/>
+                </visualEffectView>
+            </subviews>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <constraints>
+                <constraint firstItem="MAK-4V-ypU" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="FPj-88-W6r"/>
+                <constraint firstAttribute="bottom" secondItem="MAK-4V-ypU" secondAttribute="bottom" id="hlS-pP-vb8"/>
+                <constraint firstAttribute="trailing" secondItem="MAK-4V-ypU" secondAttribute="trailing" id="lFb-Ju-bkc"/>
+                <constraint firstItem="MAK-4V-ypU" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="vgE-IV-V8G"/>
+            </constraints>
+            <point key="canvasLocation" x="-371" y="-253"/>
         </view>
     </objects>
+    <resources>
+        <image name="compose_slogan.png" width="154" height="48"/>
+    </resources>
 </document>
