--- a/View/Main/ComposeTypeView/ComposeTypeView.xib
+++ b/View/Main/ComposeTypeView/ComposeTypeView.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ComposeTypeView" customModule="WB" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ComposeTypeView" customModule="ProductModelName" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -63,7 +63,7 @@
                                     <constraint firstAttribute="height" constant="44" id="lln-dy-GtJ"/>
                                 </constraints>
                             </view>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KzF-aD-97V">
+                            <scrollView multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KzF-aD-97V">
                                 <rect key="frame" x="0.0" y="152" width="320" height="224"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
@@ -98,7 +98,7 @@
                 <outlet property="returnBtnConstraint" destination="eeb-V5-ZTL" id="tpJ-mG-dLh"/>
                 <outlet property="scrollView" destination="KzF-aD-97V" id="5h7-sp-bvp"/>
             </connections>
-            <point key="canvasLocation" x="-772" y="-397"/>
+            <point key="canvasLocation" x="-1527" y="-448"/>
         </view>
     </objects>
     <resources>
