--- a/View/Main/ComposeTypeView/ComposeViewController.xib
+++ b/View/Main/ComposeTypeView/ComposeViewController.xib
@@ -37,9 +37,7 @@
                     <constraints>
                         <constraint firstAttribute="height" constant="44" id="Ssn-ps-oRD"/>
                     </constraints>
-                    <items>
-                        <barButtonItem title="Item" id="luh-Jr-CYY"/>
-                    </items>
+                    <items/>
                 </toolbar>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
